# err-marks-the-spot

./: Cargo.toml  README.md  flake.nix  shell.nix
err-marks-the-spot/: Cargo.toml
err-marks-the-spot-core/: Cargo.toml
err-marks-the-spot-core/src/: lib.rs
err-marks-the-spot-macro/: Cargo.toml
err-marks-the-spot-macro/src/: lib.rs
err-marks-the-spot-test/: Cargo.toml
err-marks-the-spot-test/src/: lib.rs
err-marks-the-spot/src/: lib.rs
error-context/: Cargo.toml
error-context-core/: Cargo.toml
error-context-facade/: Cargo.toml
error-context-macro/: Cargo.toml
error-context-macro/src/: lib.rs
error-context-test/: Cargo.toml
error-context-test/src/: lib.rs
error-context/src/: lib.rs
