[workspace]
resolver = "2"
members = [
    "error-context-facade",
    "error-context-core",
    "error-context-macro",
    "error-context-test"
]

[workspace.package]
version = "0.5.0"
description = "Add context to your errors"
authors = ["Joey Ezechiëls"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.86.0"
