[workspace]
resolver = "2"
members = [
    "err-marks-the-spot",
    "err-marks-the-spot-core",
    "err-marks-the-spot-macro",
    "err-marks-the-spot-test"
]

[workspace.package]
version = "0.8.0"
description = "Make your Rust errors point thw way!"
authors = ["Joey Ezechiëls"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.86.0"

[workspace.dependencies]
ansi_term = "0.12.1"
regex = "1.11.1"
