[package]
name = "err-marks-the-spot-macro"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = { workspace = true }
syn = { version = "2.0.100", features = ["extra-traits"] }

[lib]
proc-macro = true
