[package]
name = "err-marks-the-spot"
description = "A façade crate that exposes the functionality provided by this workspace."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
err-marks-the-spot-core  = { version = "0.6.0", path = "../err-marks-the-spot-core"  }
err-marks-the-spot-macro = { version = "0.6.0", path = "../err-marks-the-spot-macro" }
