[package]
name = "error-context-facade"
description = "A façade crate that exposes the functionality provided by this workspace."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
error-context-core  = { version = "0.6.0", path = "../error-context-core"  }
error-context-macro = { version = "0.6.0", path = "../error-context-macro" }
