[package]
name = "error-context-test"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
error-context-macro = { path = "../error-context-macro" }

[features]
default = [
    "example-build-flag"
]
example-build-flag = []
